// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations works with multiple arguments 1`] = `
"export interface SelectionOnMessage {
  id: string;
}

export interface CreateMessage {
  createMessage: SelectionOnMessage | null;
}

export interface CreateMessageInput {
  author?: string | null;
  content?: string | null;
}
"
`;

exports[`Mutations works with no arguments 1`] = `
"export interface SelectionOnMessage {
  id: string;
}

export interface CreateMessage {
  createMessage: SelectionOnMessage | null;
}
"
`;

exports[`Mutations works with one input argument (non-null) 1`] = `
"export interface SelectionOnMessage {
  id: string;
}

export interface CreateMessage {
  createMessage: SelectionOnMessage | null;
}

export interface CreateMessageInput {
  input: {
    content?: string | null;
    author?: string | null;
  };
}
"
`;

exports[`Mutations works with one input argument 1`] = `
"export interface SelectionOnMessage {
  id: string;
}

export interface CreateMessage {
  createMessage: SelectionOnMessage | null;
}

export interface CreateMessageInput {
  input?: {
    content?: string | null;
    author?: string | null;
  } | null;
}
"
`;
